tests/lca/imagebasedupgrade/mgmt/negative/internal/tsparams/const.go
package tsparams

const (
	// LabelSuite represents negative label that can be used for test cases selection.
	LabelSuite = "negative"

	// LabelImmutableSeedImage represents immutable-seed-image label that can be used for test cases selection.
	LabelImmutableSeedImage = "immutable-seed-image"

	// LabelStageTransition represents stage-transition label that can be used for test cases selection.
	LabelStageTransition = "stage-transition"

	// LabelMissingBackupLocation missing-backup-location represents immutable-seed-image
	// label that can be used for test cases selection.
	LabelMissingBackupLocation = "missing-backup-location"
)
